--- a/configs/fsod/two_branch_10shot_finetuning_coco_pvt_v2_b2_li.yaml
+++ b/configs/fsod/two_branch_10shot_finetuning_coco_pvt_v2_b2_li.yaml
@@ -1,9 +1,8 @@
 _BASE_: "Base-FSOD-C4.yaml"
-RESUME: True
 MODEL:
   PIXEL_MEAN: [103.530, 116.280, 123.675]
   PIXEL_STD: [57.375, 57.120, 58.395]
-  WEIGHTS: "/home/bibahaduri/FCT/output_pascalcoco/fsod/two_branch_training_coco_pvt_v2_b2_li/model_final.pth"
+  WEIGHTS: "./output/fsod/two_branch_training_coco_pvt_v2_b2_li/model_0019999.pth"
   MASK_ON: False
   RESNETS:
     DEPTH: 101
@@ -18,13 +17,13 @@ MODEL:
     PRE_NMS_TOPK_TEST: 12000
     POST_NMS_TOPK_TEST: 100
 DATASETS:
-  TRAIN: ("pascal_2014_train_full_10_shot",)
-  TEST: ("pascal_2014_val2",)
+  TRAIN: ("coco_2014_train_full_10_shot",)
+  TEST: ("coco_2014_val2",)
   TEST_KEEPCLASSES: 'all'
 SOLVER:
-  IMS_PER_BATCH: 16
-  BASE_LR: 0.00002
-  STEPS: (4999, 5000)
+  IMS_PER_BATCH: 8
+  BASE_LR: 0.0002
+  STEPS: (3000, 5000)
   MAX_ITER: 5001
   WARMUP_ITERS: 200
   CHECKPOINT_PERIOD: 5000
@@ -33,11 +32,11 @@ INPUT:
     FEW_SHOT: True
     SUPPORT_WAY: 5
     SUPPORT_SHOT: 10
-  MIN_SIZE_TRAIN: (480, 512, 544, 576, 608, 640, 672, 704, 736, 768, 800)
+  MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800)
   MAX_SIZE_TRAIN: 1333
   MIN_SIZE_TEST: 600
   MAX_SIZE_TEST: 1000
-OUTPUT_DIR: '/home/bibahaduri/FCT/output_pascalcoco/fsod/finetune_dir/two_branch_10shot_finetuning_coco_pvt_v2_b2_li'
-DATA_DIR: '/home/bibahaduri/pascalvoc'
+OUTPUT_DIR: './output/fsod/finetune_dir/two_branch_10shot_finetuning_coco_pvt_v2_b2_li'
+DATA_DIR: "/home/bibahaduri/coco_dataset"
 TEST:
   EVAL_PERIOD: 5000
