possibility to change rpn proposals topk

--- a/configs/fsod/training.yaml
+++ b/configs/fsod/training.yaml
@@ -6,6 +6,10 @@ MODEL:
   RPN:
     PRE_NMS_TOPK_TEST: 12000
     POST_NMS_TOPK_TEST: 100
+    # PRE_NMS_TOPK_TRAIN: 12000
+    # PRE_NMS_TOPK_TEST: 6000
+    # POST_NMS_TOPK_TRAIN: 2000
+    # POST_NMS_TOPK_TEST: 1000
   ROI_HEADS:
     NAME: "FsodStandardROIHeads"
     BATCH_SIZE_PER_IMAGE: 128
