--- a/configs/fsod/twinsv2-attentionrpn-multirelation.yaml
+++ b/configs/fsod/twinsv2-attentionrpn-multirelation.yaml
@@ -2,8 +2,9 @@ _BASE_: twinsv2-twins5.yaml
 MODEL:
   BACKBONE: 
     NAME: Twins
+    CROSS_ATTN: [False, False, False, False]
   PROPOSAL_GENERATOR:
     NAME: AttentionRPN
   ROI_BOX_HEAD:
-    NAME: FsodTwinsBoxHead # MultiRelationBoxHead
+    NAME: TwinsBoxHead # MultiRelationBoxHead
 VERSION: 2
