--- a/configs/fsod/twinsv2-attentionrpn-twins5.yaml
+++ b/configs/fsod/twinsv2-attentionrpn-twins5.yaml
@@ -1,9 +1,9 @@
 _BASE_: twinsv2-twins5.yaml
 MODEL:
   BACKBONE: 
-    NAME: FsodTwins
+    NAME: Twins
   PROPOSAL_GENERATOR:
     NAME: AttentionRPN
   ROI_BOX_HEAD:
-    NAME: FsodTwinsBoxHead # MultiRelationBoxHead
+    NAME: TwinsBoxHead
 VERSION: 2
