improv: better configs org, same backbone out_features naming

--- a/configs/datasets/dota.yaml
+++ b/configs/datasets/dota.yaml
@@ -12,5 +12,5 @@ INPUT:
   MAX_SIZE_TRAIN: 1333
   MIN_SIZE_TEST: 800
   MAX_SIZE_TEST: 1333
-DATA_DIR: "./datasets/data/dota"
+DATA_DIR: ./datasets/data/dota
 VERSION: 2
