--- a/configs/datasets/dior.yaml
+++ b/configs/datasets/dior.yaml
@@ -12,5 +12,5 @@ INPUT:
   MAX_SIZE_TRAIN: 1333
   MIN_SIZE_TEST: 800
   MAX_SIZE_TEST: 1333
-DATA_DIR: "./datasets/data/dior"
+DATA_DIR: ./datasets/data/dior
 VERSION: 2
