--- a/configs/pvt_v2/pvt5-multirelation/.pvtv2-retinanet-attentionrpn-pvt5-multirelation.yaml
+++ b/configs/pvt_v2/pvt5-multirelation/.pvtv2-retinanet-attentionrpn-pvt5-multirelation.yaml
@@ -1,7 +1,5 @@
-_BASE_: pvtv2-pvt5.yaml
+_BASE_: pvtv2-retinanet-pvt5.yaml
 MODEL:
-  BACKBONE: 
-    NAME: PyramidVisionTransformerV2
   PROPOSAL_GENERATOR:
     NAME: AttentionRPN
   ROI_BOX_HEAD:
