--- a/configs/pvt_v2/pvtv2-retinanet-xqsa-multirelation.yaml
+++ b/configs/pvt_v2/pvtv2-retinanet-xqsa-multirelation.yaml
@@ -1,7 +1,5 @@
-_BASE_: pvtv2-retinanet.yaml
+_BASE_: pvtv2-retinanet-pvt5.yaml
 MODEL:
-  BACKBONE: 
-    NAME: build_retinanet_pvtv2_fpn_backbone
   PROPOSAL_GENERATOR:
     NAME: CrossScalesRPN
   ROI_BOX_HEAD:
