--- a/configs/twins_v2/twinsv2-retinanet-attentionrpn-twins5.yaml
+++ b/configs/twins_v2/twinsv2-retinanet-attentionrpn-twins5.yaml
@@ -1,4 +1,4 @@
-_BASE_: twinsv2-twins5.yaml
+_BASE_: twinsv2-retinanet-twins5.yaml
 MODEL:
   BACKBONE:
     CROSS_ATTN: [False, False, False, False]
