--- a/configs/twins_v2/twinsv2-retinanet-xqsa-twins5.yaml
+++ b/configs/twins_v2/twinsv2-retinanet-xqsa-twins5.yaml
@@ -1,7 +1,7 @@
-_BASE_: twinsv2-twins5.yaml
+_BASE_: twinsv2-retinanet-twins5.yaml
 MODEL:
   BACKBONE:
     CROSS_ATTN: [False, False, False, False]
   PROPOSAL_GENERATOR:
-    NAME: AttentionRPN
+    NAME: CrossScalesRPN
 VERSION: 2
