fix: crossattention in detection head

--- a/configs/pvt_v2/pvtv2-retinanet-xqsa-pvt5.yaml
+++ b/configs/pvt_v2/pvtv2-retinanet-xqsa-pvt5.yaml
@@ -1,7 +1,7 @@
 _BASE_: pvtv2-retinanet-pvt5.yaml
 MODEL:
   BACKBONE:
-    CROSS_ATTN: [False, False, False, False]
+    CROSS_ATTN: [False, False, False, True]
   PROPOSAL_GENERATOR:
     NAME: CrossScalesRPN
 VERSION: 2
