fix: make it runnable

--- a/configs/stages/training.yaml
+++ b/configs/stages/training.yaml
@@ -26,9 +26,8 @@ SOLVER:
   WARMUP_FACTOR: 0.1
   CHECKPOINT_PERIOD: 10000
   HEAD_LR_FACTOR: 2.0
-INPUT:
-  FS:
-    ENABLED: True
-    SUPPORT_WAY: 2
-    SUPPORT_SHOT: 30
+FEWSHOT:
+  ENABLED: True
+  SUPPORT_WAY: 2
+  SUPPORT_SHOT: 30
 VERSION: 2
