--- a/configs/stages/finetuning.yaml
+++ b/configs/stages/finetuning.yaml
@@ -9,7 +9,6 @@ SOLVER:
   MAX_ITER: 7501
   WARMUP_ITERS: 300
   CHECKPOINT_PERIOD: 5000
-INPUT:
-  FS:
-    FEW_SHOT: True
+FEWSHOT:
+  FEW_SHOT: True
 VERSION: 2
